# ikyo

./: .gitignore  CMakeLists.txt  CMakePresets.json  Package.resolved  Package.swift  README.md  a_ko.txt  b.ts  eventa.txt  test.txt
Docs/: a.txt  a_korean.txt  bevyECS.txt  ecs_guide_korean.txt  enttECS.txt
Libraries/CGLFW/: module.modulemap
Source/: CMakeLists.txt  Game.cc  Game.swift  main.c  main.swift
Source/Core/: CMakeLists.txt  GLFW.swift  Log.h  Log.swift
Source/Core/Event/: Event.swift
Source/Core/Memory/: !memory.txt  Allocator.swift  Arena.swift  BinnedAllocator.swift  CMakeLists.txt  LargeAllocator.swift  Memory.ixx  MemoryDebug.swift  ThreadLocalCache.swift  VirtualMemory.c  VirtualMemory.h  VirtualMemory.swift
Source/Core/Memory/VirtualMemory/: Posix.cc  VirtualMemory.ixx  Windows.cc
Source/ECS/: Entity.swift
Source/ECS/Storage/: PackedSparseSet.swift
Sources/Common/Memory/: SystemMemory.swift
Sources/Common/Memory/VirtualMemory/: Posix.swift  Windows.swift
Sources/Foundation/Heap/: OSAllocator.h
Sources/Foundation/Thread/: Atomics.h  Thread.h
Sources/Game/: Game.swift
include/: module.modulemap
